--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,22 @@
   background-color: #FFFFFF;
 }
 
+
+html {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    box-sizing: border-box;
+}
+
+body, html {
+  height: 100%;
+}
+
+body {
+  line-height: 1.5;
+  font-family: "Beatrice", sans-serif;
+  color: #000;
+}
