--- a/src/Components/Header.scss
+++ b/src/Components/Header.scss
@@ -1,6 +1,5 @@
+
 .header {
-    display: flex;
-    justify-content: space-between;
     margin-top: 50px;
 
     .header--icon {
@@ -25,7 +24,6 @@
         a {
             text-decoration: none;
             color: #4F4F4F;
-            border-bottom: 1px solid #B5AE72;
     
                 li {
                     font-size: 16px;
@@ -34,22 +32,47 @@
     }
 
     .header--languages {
+        justify-content: center;
+
         a {
             color: #B5AE72;
-            border-bottom: 1px solid #B5AE72;
             margin-right: 10px;
+        }
+
+        a:hover {
+            border-bottom: 1px solid #B5AE72;
+        }
+
+        a:active {
+            border-bottom: 1px solid #B5AE72;
         }
     }
 
     .header--retailer {
-        li {
-            padding-right: 30px;
-        }
 
         a {
             padding-left: 45px;
             margin-right: 20px;
             padding-bottom: 15px;
+            position: relative;
+
+            &:after {
+                content: '';
+                position: absolute;
+                bottom: 0px;
+                left: 0px;
+                display: block;
+                height: 1px;
+                width: 82px;
+                background: #B5AE72;
+                transition: 0.6s cubic-bezier(0.215, 0.61, 0.355, 1);
+            }
+
+            &:hover:after {
+                left: 45px;
+                width: calc(100% - 45px);
+
+            }
         }
     }
 
