--- a/src/Components/Heading.scss
+++ b/src/Components/Heading.scss
@@ -1,4 +1,5 @@
 .heading {
+    margin: 80px 0;
 
     h1 {
     color: #B5AE72;
@@ -10,5 +11,9 @@
         -webkit-text-fill-color: white;
         -webkit-text-stroke-width: 1px;
         -webkit-text-stroke-color: #B5B26F;
+    }
+
+    &--h4 {
+        margin: 60px 0;
     }
 }
