--- a/src/Components/Whyus.scss
+++ b/src/Components/Whyus.scss
@@ -1,16 +1,16 @@
 .whyus {
 
-    &--heading {
-        color: #B5B26F;
+    // &--heading {
+    //     color: #B5B26F;
 
-        &_textleft {
-            text-align: left;
-        }
+    //     &_textleft {
+    //         text-align: left;
+    //     }
         
-        &_textright {
-            text-align: right;
-        }
-    }
+    //     &_textright {
+    //         text-align: right;
+    //     }
+    // }
 
     &--title {
         color: #B5B26F;
