--- a/src/Components/Organic.scss
+++ b/src/Components/Organic.scss
@@ -1,13 +1,45 @@
-.organic{
+.organic {
+    margin-top: 80px;
+    text-align: left;
+    background-color: gray;
 
     &--img {
-        position: absolute;
-        top: -2px;
-        left: 50%;
-        transform: translateX(-50%);
-        height: 210%;
-        width: auto;
-        max-width: none;
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 290px;
+
+        img {
+            position: absolute;
+            height: 50%;
+            width: 50%;
+            border-radius: 50%;
+        }
+    }
+
+    &--text {
+
+        h1 {
+            color: #A3A46D;
+            margin-bottom: 20px;
+            margin-top: 30px;
+            line-height: 1.3;
+            font-size: 5rem;
+        }
+
+        p {
+            font-size: 16px;
+        }
+
+        &_white {
+            color: #B5B26F;
+            -webkit-text-fill-color: #f8f7f1;
+            -webkit-text-stroke-width: 1px;
+            -webkit-text-stroke-color: #B5B26F;
+        }
+
     }
 
 } 
