add component TextCarousel

--- a/src/Components/Getaqoute.scss
+++ b/src/Components/Getaqoute.scss
@@ -60,5 +60,13 @@ ul {
         width: 160px;
 
     }
+
+    ul {
+        list-style-type: none;
+    
+        li {
+            font-size: 20px;
+        }
+    }
 }
 
