--- a/src/Components/TextCarousel.scss
+++ b/src/Components/TextCarousel.scss
@@ -1,20 +1,30 @@
-.TextCarousel {
+.textCarousel {
     display: flex;
+    flex-wrap: wrap;
 
-    span {
-        font-size: 80px;
-        color: #fff;
-        margin-right: 60px;
+        li {
+            font-size: 70px;
+            color: #fff;
 
-    }
+            li:last-child {
+                margin-right: 0;
+              }
+        }
 
-    .dot {
-        width: 10px;
-        height: 10px;
-        background-color: #A9A9A9;
-        border-radius: 50%;
-        display: inline-block;
-        border: 1px solid #fff;
-      }
+        li:after {
+            content: '';
+            display: inline-block;
+            width: 10px;
+            height: 10px;
+            border-radius: 50%;
+            border: 1px solid #fff;
+            margin: 0 50px 0 40px;
+            position: relative;
+            top: -20px;
+        }
 
+}
+
+ul.textCarousel {
+    list-style-type: none;
 }
