--- a/src/Components/Getaqoute.scss
+++ b/src/Components/Getaqoute.scss
@@ -33,13 +33,14 @@
 
 }
 
-ul {
+
+ul.getaqoute--text {
     list-style-type: none;
 
     li {
         font-size: 20px;
     }
-}
+}   
 
 .getaqoute--retailer {
 
@@ -47,17 +48,17 @@ ul {
         content: '';
         position: absolute;
         bottom: 0px;
-        left: -30px;
+        left: -20px;
         display: block;
         height: 1px;
-        width: 95px;
+        width: 82px;
         background: #B5AE72;
         transition: 0.6s cubic-bezier(0.215, 0.61, 0.355, 1);
     }
 
     &:hover:after {
-        left: 10px;
-        width: 160px;
+        left: 45px;
+        width: calc(100% - 45px);
 
     }
 
