add new component Footer

--- a/src/Components/TextWithTitle.scss
+++ b/src/Components/TextWithTitle.scss
@@ -6,6 +6,7 @@
         h1 {
             font-size: 5rem;
             margin: 80px 0;
+            text-align: center;
         }
 
             &_white {
