--- a/src/Components/Perfectmattress.scss
+++ b/src/Components/Perfectmattress.scss
@@ -93,6 +93,27 @@
             text-align: center;
         }
     }
+
+    .images2 {
+
+        video, p {
+            margin-left: -150px;
+        }
+
+    }
+
+    .images2, .images1 {
+
+        p {
+            margin-right: 150px;
+        }
+
+    }
+
+
+    ul {
+        list-style-type: none;
+    }
 }
 
 .top {
