--- a/src/Components/OverlappingImages.scss
+++ b/src/Components/OverlappingImages.scss
@@ -2,9 +2,10 @@
     margin-top: 140px;
 
     img {
-        width: 700px;
-        height: 100%;
-        margin: 20px;
+        width: 100%;
+        height: auto;
+        margin-bottom: 50px;
+        margin-left: -150px;
     }
 }
 
