--- a/src/Components/TextWithTitle.scss
+++ b/src/Components/TextWithTitle.scss
@@ -18,3 +18,25 @@
     }
 
 }
+
+
+@media screen and (max-width: 700px) {
+
+    .textWithTitle--heading {
+        
+        h1 {
+            font-size: 4rem;
+        }
+    }
+}
+
+@media screen and (max-width: 400px) {
+
+
+    .textWithTitle--heading {
+        
+        h1 {
+            font-size: 2rem;
+        }
+    }
+}
