--- a/src/Components/OverlappingImagesFirst.scss
+++ b/src/Components/OverlappingImagesFirst.scss
@@ -9,6 +9,22 @@
     }
 }
 
+.heading--h4 {
+    margin: 60px 0;
+    text-align: center;
+}
+
+.background {
+    
+    background-color: #B5B26F;
+    padding-top: 20px;
+
+    .heading--h4 {
+        margin-bottom: 10px;
+    }
+
+}
+
 @media screen and (max-width: 700px) {
 
     .images2, .images1 {
