--- a/src/Components/OverlappingImagesFirst.scss
+++ b/src/Components/OverlappingImagesFirst.scss
@@ -1,3 +1,7 @@
+.overlappingImagesFirst {
+    transition: background-color 1s;
+}
+
 .images2 {
     margin-top: 140px;
 
@@ -24,7 +28,6 @@
     }
 
 }
-
 @media screen and (max-width: 700px) {
 
     .images2, .images1 {
